--- a/ContactUs.html
+++ b/ContactUs.html
@@ -6,7 +6,7 @@
     <title>Contact Us</title>
 </head>
 <body>
-    <h1>Please free to contact us</h1>
+    <h1>Feel free to reach out</h1>
     <h2>phone no.: <a href="tel:+91472839427">Call here.</a></h2>
     <h2>email : <a href="mailto:abc@gmail.com">Mail here.</a> </h2>
     <p>To know more about us..<a href="AboutUs.html">Click here</a></p>
