--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
-<html>
-    <head>
-        <title>Darshan's Web page</title>
-    </head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <nav>
+      <div class="logo">HELLO FRIENDS</div>
+      <div class="nav-items">
+        <a href="/">Home</a> <a href="/">About</a> <a href="/">Contact</a>
+      </div>
+    </nav>
+    <section class="hero">
+      <div class="hero-container">
+        <div class="column-left">
+          <h1>Lets Get to Know Each Other</h1>
+          <p>
+            Every great friendship begins with a simple hello and the courage to connect.
+          </p>
+          <button>Get Started</button>
+        </div>
+        <div class="column-right">
+          <img
+            src="C:\Coding\C_Html\friends.image.png"
+            alt="Friends"
+            class="hero-image"
+          />
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
-<body>
-    <h1>Welcome to my web page..</h1>
-    <hr>
-    <P> <strong>Hello guys</strong> <br/> How are you ?</P>
-    <p>Visit our <a href="home.html">Home page</a></p>
-    <img src="D:\home.jpg" alt="image" height="580px" width="1400px"/>
-
-</body>
