--- a/assignment 3/bootstrap/index.html
+++ b/assignment 3/bootstrap/index.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="logo">Tin Dog</div>
       <div class="nav-items">
-        <a href="/">Contact</a> <a href="/">Pricing</a> <a href="/">Download</a>
+       <a href="#footer">Contact</a> <a href="#pricing">Pricing</a> <a href="#contact">Download</a>
       </div>
     </nav>
     <div class="hero">
@@ -141,7 +141,7 @@
   </div>
 </section>
 
-<section id="cta">
+<section id="contact">
   <h1>Find the True Love of Your Dog's Life Today!</h1>
   <button type="button" class="btn btn-dark btn-lg download-button">
     <i class="fab fa-apple"></i> Download
